# mcp-compat

./: README.md  pyproject.toml
.github/workflows/: tests.yml
mcp_compat/: __init__.py  cli.py  compat.py
tests/: test_compat.py
